Bug 434270 - Recorder stops working unexpectedly because of no space and doesn't inform the user
Summary: Recorder stops working unexpectedly because of no space and doesn't inform th...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2021-03-11 04:06 UTC by Tiar
Modified: 2021-05-18 06:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2021-03-11 04:06:08 UTC
SUMMARY
I often use Save Incremental Version, and I noticed that the new Recorder docker doesn't work with it correctly.


STEPS TO REPRODUCE
1. Create a document
2. Save it under some name
3. Start recording (confirm it creates frames)
4. Use Save Incremental Version

OBSERVED RESULT
No new frames

EXPECTED RESULT
Should still save frames to the same place, and - the most important - should still be active if I'm using the same document and I haven't turned off, even though the filename changed. At the very least it should create a new directory - but judging from the fact that if I turn i on again, it saves to the same directory, it could just continue working.

SOFTWARE/OS VERSIONS
Krita

 Version: 5.0.0-prealpha (git eda033d)
 Languages: pl_PL, pl, pl_PL, pl
 Hidpi: true

Qt

  Version (compiled): 5.11.1
  Version (loaded): 5.11.1
Comment 1 Tiar 2021-03-11 14:01:43 UTC
I think it's not related to Save Incremental Version but to the fact that I had no space on the disk it was pointing to. Recorder detects it and stops working, but it doesn't warn me that it stopped recording. I think this is still an issue, just a different kind.
Comment 2 Tiar 2021-04-14 02:59:34 UTC
I'm marking it as "release_blocker" because this is a somewhat important issue - it can result in some kind of dataloss, not the loss of the project, but the loss of recording. If you consider that people do make videos in for example Procreate (another program that has built-in recording) for a living, then the recording is nearly as important as the outcome (.kra project) in terms of data.
Comment 3 Bug Janitor Service 2021-05-15 15:40:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/845
Comment 4 Dmitry Kazakov 2021-05-18 06:29:10 UTC
Git commit 1e8d82b4cfb2a10bca28ad185189d8a256236b63 by Dmitry Kazakov, on behalf of Dmitrii Utkin.
Committed on 18/05/2021 at 06:28.
Pushed by dkazakov into branch 'master'.

Show message in case of recorder failed to write a frame
Block export and show extended description when FFMpeg couldn't be detected

M  +8    -2    plugins/dockers/recorder/recorder_export.cpp
M  +9    -3    plugins/dockers/recorder/recorder_writer.cpp
M  +1    -0    plugins/dockers/recorder/recorder_writer.h
M  +8    -0    plugins/dockers/recorder/recorderdocker_dock.cpp
M  +1    -0    plugins/dockers/recorder/recorderdocker_dock.h

https://invent.kde.org/graphics/krita/commit/1e8d82b4cfb2a10bca28ad185189d8a256236b63