Show message in case of recorder failed to write a frame Block export and show extended description when FFMpeg couldn't be detected

BUG:434270