plugins/dockers/recorder/recorder_writer.cpp
@@ -107,7 +107,8 @@ public:
 
     // Calculate ARGB average value using carry save adder:
     //   https://www.qt.io/blog/2009/01/20/50-scaling-of-argb32-image
-    inline quint32 avg(quint32 c1, quint32 c2) {
+    inline quint32 avg(quint32 c1, quint32 c2)
+    {
         return (((c1 ^ c2) & 0xfefefefeUL) >> 1) + (c1 & c2);
     }
 
@@ -176,7 +177,10 @@ public:
         const QString &fileName = QString("%1%2.jpg")
                                   .arg(settings.outputDirectory)
                                   .arg(partIndex, 7, 10, QLatin1Char('0'));
-        return frame.save(fileName, "JPEG", settings.quality);
+        bool result = frame.save(fileName, "JPEG", settings.quality);
+        if (!result)
+            QFile(fileName).remove(); // remove corrupted frame
+        return result;
     }
 
 };
@@ -282,8 +286,10 @@ void RecorderWriter::timerEvent(QTimerEvent */*event*/)
 
     ++d->partIndex;
     bool isFrameWritten = d->writeFrame();
-    if (!isFrameWritten)
+    if (!isFrameWritten) {
+        emit frameWriteFailed();
         quit();
+    }
 }
 
 void RecorderWriter::onImageModified()
