plugins/dockers/recorder/recorder_writer.h
@@ -39,6 +39,7 @@ public:
 Q_SIGNALS:
     void pausedChanged(bool paused);
     void prefixChanged(QString prefix);
+    void frameWriteFailed();
 
 protected:
     void run() override;
