plugins/dockers/recorder/recorderdocker_dock.h
@@ -42,6 +42,7 @@ private Q_SLOTS:
     void onWriterStarted();
     void onWriterFinished();
     void onWriterPausedChanged(bool paused);
+    void onWriterFrameWriteFailed();
 
 private:
     Q_DISABLE_COPY(RecorderDockerDock)
